new and create grid

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="text-center">
+  <h1>Bienvenue sur Tic Tac Toe</h1>
+  <div class="my-5">
+    <%= link_to "Commencer une partie", new_grid_path, class: "btn btn-primary" %>
+  </div>
+</div>
