--- a/app/views/grids/show.html.erb
+++ b/app/views/grids/show.html.erb
@@ -1,5 +1,8 @@
 <div class="row justify-content-center">
   <div class="col-12 col-md-8">
     <h2 class="text-center"><%= @grid.user.nickname %> VS <%= @grid.opponent.nickname %></h2>
+    <div class="text-center">
+      <%= render 'grid', grid: @grid %>
+    </div>
   </div>
 </div>
