--- a/app/views/grids/_grid.html.erb
+++ b/app/views/grids/_grid.html.erb
@@ -1,9 +1,16 @@
-<table class="table grid-table shadow-sm">
+<p>C'est au tour de : <%= grid.user_who_plays.nickname %></p>
+<table class="table table-bordered table-secondary align-middle grid-table shadow-sm">
   <tbody>
     <% grid.cells.each_slice(Grid::SIZE) do |line| %>
       <tr>
         <% line.each do |cell| %>
-          <td class="<%= cell_class(cell)%>"></td>
+          <td class="position-relative <%= cell_class(cell)%>">
+            <%= link_to_if cell.user.nil? && grid.user_who_plays == current_user,
+                           cell_content(cell), 
+                           cell_path(cell), 
+                           data: { 'turbo-method': :patch }, 
+                           class:"text-reset stretched-link" %>
+          </td>
         <% end %>
       </tr>
     <% end %>
