--- a/app/views/grids/_grid.html.erb
+++ b/app/views/grids/_grid.html.erb
@@ -1,11 +1,17 @@
-<p>C'est au tour de : <%= grid.user_who_plays.nickname %></p>
+<% if grid.finished? %>
+  <p>Partie finie!</p>
+<% elsif grid.draw? %>
+  <p>Match nul :'( </p>
+<% else %>
+  <p>C'est au tour de : <%= grid.user_who_plays.nickname %></p>
+<% end %>
 <table class="table table-bordered table-secondary align-middle grid-table shadow-sm">
   <tbody>
     <% grid.cells.each_slice(Grid::SIZE) do |line| %>
       <tr>
         <% line.each do |cell| %>
           <td class="position-relative <%= cell_class(cell)%>">
-            <%= link_to_if cell.user.nil? && grid.user_who_plays == current_user,
+            <%= link_to_if cell.user.nil? && grid.user_who_plays == current_user && grid.in_progress?,
                            cell_content(cell), 
                            cell_path(cell), 
                            data: { 'turbo-method': :patch }, 
