--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,11 @@
 <div class="text-center">
   <h1>Bienvenue sur Tic Tac Toe</h1>
   <div class="my-5">
-    <%= link_to "Commencer une partie", new_grid_path, class: "btn btn-primary" %>
+    <% if user_signed_in? %>
+      <%= link_to "Commencer une partie", new_grid_path, class: "btn btn-primary" %>
+    <% else %>
+      <%= link_to "Se connecter", new_user_session_path, class: "btn btn-primary" %>
+    <% end %>
+    
   </div>
 </div>
