--- a/app/views/grids/new.html.erb
+++ b/app/views/grids/new.html.erb
@@ -15,7 +15,7 @@
                             required: false %>
         </div>
         <div class="form-actions">
-          <%= f.submit "Jouer!", class:"btn btn-primary" %>
+          <%= f.submit "Jouer!", class:"btn btn-outline-primary" %>
         </div>
       <% end %>
       
