--- a/app/views/grids/new.html.erb
+++ b/app/views/grids/new.html.erb
@@ -2,17 +2,23 @@
   <div class="col-12 col-md-10 col-lg-8">
     <div class="custom-form">
       <h2>Nouvelle partie</h2>
-      <%= simple_form_for @grid do |f| %>
+      <%= simple_form_for @grid, html: {data: {controller: "grid-form"}} do |f| %>
         <div class="d-flex flex-column flex-lg-row justify-content-between align-items-lg-baseline my-5">
           <div>
-            <%= check_box_tag "play_with_ia", "true", true %>
+            <%= check_box_tag "play_with_ia", "true", true, data: {grid_form_target: "checkbox", action: "grid-form#toggleIA"} %>
             <%= label_tag "play_with_ia", "Jouer contre l'ordinateur" %>
           </div>
           <div class="text-center text-muted my-4">OU</div>
           <%= f.association :opponent, 
                             collection: User.all.excluding(current_user, ia).collect{|u| [u.nickname, u.id]},
                             label: "Choissir votre adversaire", 
-                            required: false %>
+                            required: false,
+                            input_html: {
+                              data: {
+                                action: "grid-form#toggleIA",
+                                grid_form_target: "select",
+                              }
+                            } %>
         </div>
         <div class="form-actions">
           <%= f.submit "Jouer!", class:"btn btn-outline-primary" %>
