--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,9 +7,9 @@
         <%= f.error_notification %>
 
         <div class="form-inputs">
+          <%= f.input :nickname, label: "Nom d'utilisateur", autofocus: true %>
           <%= f.input :email,
                       required: true,
-                      autofocus: true,
                       input_html: { autocomplete: "email" }%>
           <%= f.input :password,
                       label: "Mot de passe",
